# Inertia

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  sc.py  settings.gradle.kts
.github/workflows/: build-natives.yml
gradle/wrapper/: gradle-wrapper.properties
inertia-api/: build.gradle.kts
inertia-api/src/main/java/com/ladakx/inertia/api/: ApiErrorCode.java  ApiResult.java  ExecutionContext.java  (+8 more)
inertia-common/: build.gradle.kts
inertia-common/src/main/java/com/ladakx/inertia/: InertiaLogger.java
inertia-core/: build.gradle.kts
inertia-core/src/main/java/com/jme3/bounding/: BoundingBox.java
inertia-core/src/main/java/com/jme3/bullet/: PhysicsSpace.java
inertia-core/src/main/java/com/jme3/math/: CommonTrigMath.java  CurveAndSurfaceMath.java  FastMath.java  Matrix3f.java  Quaternion.java  Spline.java  SplineMath.java  Util.java  Vector2f.java  Vector3f.java  Vector4f.java
inertia-core/src/main/java/com/jme3/system/: JmeSystem.java  NativeLibraryLoader.java  Platform.java
inertia-core/src/main/java/com/ladakx/inertia/: InertiaLogger.java  InertiaPlugin.java  InertiaSpigotPlugin.java  NativeLibraryLoader.java
inertia-core/src/main/resources/: blocks.yml  bodies.yml  config.yml  items.yml  plugin.yml  render.yml  shape_instructuon.txt  worlds.yml
inertia-core/src/main/resources/lang/: lang_en.yml  lang_ru.yml
inertia-nms-abstraction/: build.gradle.kts
inertia-nms-v1_12_R1/: build.gradle.kts
inertia-nms-v1_16_R3/: build.gradle.kts
inertia-nms-v1_16_R3/src/main/java/com/inertia/: Main.java
inertia-nms-v1_16_R3/src/main/resources/: blocks.yml
inertia-nms-v1_17_R1/: build.gradle.kts
inertia-nms-v1_17_R1/wiki/: bodies.yml
inertia-nms-v1_18_R1/: build.gradle.kts
inertia-nms-v1_18_R2/: build.gradle.kts
inertia-nms-v1_19_R1/: build.gradle.kts
inertia-nms-v1_19_R2/: build.gradle.kts
inertia-nms-v1_19_R3/: build.gradle.kts
inertia-nms-v1_20_R1/: build.gradle.kts
inertia-nms-v1_20_R2/: build.gradle.kts
inertia-nms-v1_20_R3/: build.gradle.kts
inertia-nms-v1_20_R4/: build.gradle.kts
inertia-nms-v1_21_R1/: build.gradle.kts
inertia-nms-v1_21_R1/src/main/java/me/ladakx/: Main.java
inertia-nms-v1_21_R2/: build.gradle.kts
inertia-nms-v1_21_R3/: build.gradle.kts
inertia-nms-v1_21_R4/: build.gradle.kts
inertia-nms-v1_21_R5/: build.gradle.kts
inertia-nms-v1_21_R6/: build.gradle.kts
inertia-nms-v1_21_R7/: build.gradle.kts
inertia-nms-v1_21_R8/: build.gradle.kts
inertia-plugin/: build.gradle.kts
inertia-plugin/src/main/java/com/ladakx/inertia/: InertiaSpigotPlugin.java
inertia-plugin/src/main/resources/: blocks.yml  bodies.yml  config.yml  lang_uk.yml  plugin.yml
inertia-test-bodies/: build.gradle.kts
inertia-test-bodies/src/main/resources/: plugin.yml  render.yml
inertia-test-chain/src/main/resources/: plugin.yml  render.yml
inertia-test-ragdolls/src/main/resources/: plugin.yml  render.yml
inertia-test-tnt/src/main/resources/: plugin.yml  render.yml
native/: CMakeCache.txt  CMakeLists.txt
native/src/: JNI_Bridge.cpp
(+890 files in other folders)
